# IBKR-to-Xero

./: .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  pyproject.toml
ib_connector/: __init__.py  cli.py  convert.py  model.py  parser.py  reconcile.py  writer.py
ibkr_to_xero/: __init__.py  cli.py  convert.py  engine.py  gui.py  reconcile.py  writer.py
planning/: 2026-07-03-unattributed-gst-research.md  2026-07-08-gui-companion-plan.md  README.md
templates/: StatementImportTemplate.csv
tests/: conftest.py  test_convert.py  test_end_to_end.py  test_full_year.py  test_gui.py  test_parser.py  test_reconcile.py
