[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ib-connector"
version = "0.1.0"
description = "Convert Interactive Brokers Activity Statements into per-currency Xero bank-import CSVs, with strict cash reconciliation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ib-connector = "ib_connector.cli:main"

[tool.setuptools.packages.find]
include = ["ib_connector*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
