[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-to-xero"
version = "0.1.0"
description = "Convert Interactive Brokers Activity Statements into per-currency Xero bank-import CSVs, with strict cash reconciliation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
ibkr2xero = "ibkr_to_xero.cli:main"

[tool.setuptools.packages.find]
include = ["ibkr_to_xero*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
