[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "ibkr-to-xero"
version = "0.1.0"
description = "Convert Interactive Brokers Activity Statements into per-currency Xero bank-import CSVs, with strict cash reconciliation"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Sergei Kulik" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
gui = ["PySide6-Essentials>=6.7"]

[project.scripts]
ibkr2xero = "ibkr_to_xero.cli:main"

[project.gui-scripts]
ibkr2xero-gui = "ibkr_to_xero.gui:main"

[tool.setuptools.packages.find]
include = ["ibkr_to_xero*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
